Name:                monad-reader-state-err-io
Version:             0.1.0
Synopsis:            Reader State IO Error Monad
Description:         Reader State IO Error Monad
License:             BSD3
Author:              Uwe Schmidt
Maintainer:          uwe@fh-wedel.de
Copyright:           2018 Uwe Schmidt
Category:            Control
Build-type:          Simple
Cabal-version:       >=1.10


library
  exposed-modules:   Control.Monad.ReaderStateErrIO

  build-depends:       base          >= 4   && < 5
                     , process       >= 1.2
                     , mtl           >= 2.2
                     , transformers  >= 0.4

  hs-source-dirs:    .

  ghc-options: -Wall -fwarn-tabs

  default-language:   Haskell2010
  
  default-extensions: MultiParamTypeClasses FunctionalDependencies FlexibleInstances

executable test-reader-state-err-io
  main-is:             TestReaderStateErrIO.hs
--  type:                exitcode-stdio-1.0

  other-modules:       Control.Monad.ReaderStateErrIO

  build-depends:       base
                     , monad-reader-state-err-io
                     , process
                     , mtl
                     , transformers
                     , random

  hs-source-dirs:      . test
  ghc-options:         -Wall  -fwarn-tabs

  default-language:   Haskell2010
  

